# xim_reader

./: .gitignore  Cargo.toml  flake.nix  pyproject.toml
.github/workflows/: release.yml
src/: error.rs  lib.rs  reader.rs
