[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "xim_reader"
version = "0.1.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.20.3, <2.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "maturin-import-hook>=0.2.0",
    "pdoc>=15.0.1",
    "pylinac>=3.23.2",
]

[tool.maturin]
features = ["pyo3/extension-module"]
